--- a/css/style.css
+++ b/css/style.css
@@ -310,12 +310,50 @@ header .navbar a:hover {
 .gallery .box-container .box .content p {
   font-size: 1.5rem;
   color: #666;
-  padding: 1rem 0;
+  padding: 1rem 0;;
 }
 
 .gallery .box-container .box:hover .content {
   top: 0;
 }
+.tasks .box-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+
+.tasks .box-container .box1 {
+  text-align: center;
+  padding: 2rem;
+  border: 1rem solid var(--red);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+  border-radius: 0.5rem;
+  flex: 1 1 30rem;
+  background-color: white;
+  margin-top: 6rem;
+}
+
+.tasks .box-container .box1 img {
+  height: 12rem;
+  width: 12rem;
+  border-radius: 50%;
+  border: 1rem solid #fff;
+  margin-top: -8rem;
+  object-fit: cover;
+}
+
+.tasks .box-container .box1 h4 {
+  font-size: 2.5rem;
+  color: var(--red);
+  padding: 0.5rem 0;
+}
+
+.tasks .box-container .box1 p {
+  font-size: 1.5rem;
+  color: #eee;
+  padding: 1rem 0;
+}
+
 
 .review .box-container {
   display: flex;
@@ -472,3 +510,19 @@ header .navbar a:hover {
     width: 100%;
   }
 }
+.user{
+  padding: 0.8rem 3rem;
+  border: 0.2rem solid var(--red);
+  color: var(--red);
+  cursor: pointer;
+  font-size: 1rem;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  z-index: 0;
+ }
+ .report{
+   width: 100%;
+   display: flex;
+   justify-content: center;
+ }
+ 
